<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:fillViewport="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/tripname"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tripNameID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/tickets"
            android:hint=""
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/destination"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/destID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/location"
            android:hint=""
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/triptype"
        android:textSize="20dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/cityBreakID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/citybreak"
            android:layout_margin="5px"></RadioButton>
            <!--android:onClick="doNothing"-->

        <RadioButton
            android:id="@+id/mountainsID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mountains"
            android:padding="10dp"
            android:layout_margin="5px"></RadioButton>
            <!--android:onClick="doNothing"-->

        <RadioButton
            android:id="@+id/seesideID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seeside"
            android:padding="10dp"
            android:layout_margin="5px"></RadioButton>
            <!--android:onClick="doNothing"-->
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:gravity="left"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/seekBarID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="2000"
            android:progress="1" />

        <TextView
            android:id="@+id/outputSBarID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startdate"
                android:textSize="20dp"/>
            <DatePicker
                android:id="@+id/date1ID"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enddate"
                android:textSize="20dp"/>
            <DatePicker
                android:id="@+id/date2ID"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:datePickerMode="spinner"
                android:calendarViewShown="false">
            </DatePicker>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textSize="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RatingBar
            android:id="@+id/ratingBarID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="0.5"/>
    </LinearLayout>
</LinearLayout>